<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    xmlns:tools="http://schemas.android.com/tools"  
    android:layout_width="match_parent"  
    android:layout_height="match_parent"  
    android:orientation="vertical" >  
  
    <LinearLayout  
        android:layout_width="match_parent"  
        android:layout_height="45dp"  
        android:background="#0E6DB0"  
        android:gravity="center"  
        android:orientation="vertical" >  
  
        <TextView  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_gravity="center"  
            android:text="@string/app_name"  
            android:textColor="#ffffff"  
            android:textSize="20sp"  
            android:textStyle="bold" />  
            
    </LinearLayout>  
  
    <FrameLayout  
        android:id="@+id/flContainer"  
        android:layout_width="match_parent"  
        android:layout_height="0dp"  
        android:layout_weight="1" >  
    </FrameLayout>  
  
    <LinearLayout  
        android:layout_width="match_parent"  
        android:layout_height="65dp"  
        android:baselineAligned="false"
        android:background="#0E6DB0"  
        android:orientation="horizontal" >  
  
        <LinearLayout  
            android:id="@+id/llShouye"  
            android:layout_width="0dp"  
            android:layout_height="match_parent"  
            android:layout_weight="1"  
            android:gravity="center"  
            android:orientation="vertical" >  
  
            <TextView  
                android:id="@+id/tvShouye"  
                android:layout_width="wrap_content"  
                android:layout_height="wrap_content"  
                android:gravity="center"
                android:text="@string/navigation_shouye"  
                 />  
        </LinearLayout>  
  
        <LinearLayout  
            android:id="@+id/llTubiao"  
            android:layout_width="0dp"  
            android:layout_height="match_parent"  
            android:layout_weight="1"  
            android:gravity="center"  
            android:orientation="vertical" >   
  
            <TextView  
                android:id="@+id/tvTubiao"  
                android:layout_width="wrap_content"  
                android:layout_height="wrap_content"  
                android:gravity="center"
                android:text="@string/navigation_tubiao"  
                 />  
        </LinearLayout>  
  
        <LinearLayout  
            android:id="@+id/llLishi"  
            android:layout_width="0dp"  
            android:layout_height="match_parent"  
            android:layout_weight="1"  
            android:gravity="center"  
            android:orientation="vertical" >  
  
            <TextView  
                android:id="@+id/tvLishi"  
                android:layout_width="wrap_content"  
                android:layout_height="wrap_content"  
                android:gravity="center"
                android:text="@string/navigation_lishi"  
                 />  
        </LinearLayout>  
  
        <LinearLayout  
            android:id="@+id/llGeren"  
            android:layout_width="0dp"  
            android:layout_height="match_parent"  
            android:layout_weight="1"  
            android:gravity="center"  
            android:orientation="vertical" >  
            
            <TextView  
                android:id="@+id/tvGeren"  
                android:layout_width="wrap_content"  
                android:layout_height="wrap_content"  
                android:gravity="center"
                android:text="@string/navigation_geren"  
                 />  
        </LinearLayout>  
    </LinearLayout>  
  
</LinearLayout>